--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               'spin-very-slow': 'spin 20s linear infinite',
               'rays': 'rays 15s linear infinite',
               'particle-up': 'particle-up 10s ease-in-out infinite',
-              'glow-pulse': 'glow-pulse 2.5s infinite ease-in-out',
+              'glow-pulse': 'glow-pulse 3s infinite ease-in-out',
             },
             keyframes: {
               float: {
@@ -91,8 +91,8 @@
                 '100%': { transform: 'translateY(-100%) translateX(20px)', opacity: '0' },
               },
               'glow-pulse': {
-                '0%, 100%': { boxShadow: '0 0 15px rgba(30, 27, 75, 0.1)', borderColor: 'rgba(30, 27, 75, 0.2)' },
-                '50%': { boxShadow: '0 0 35px rgba(79, 70, 229, 0.5)', borderColor: 'rgba(79, 70, 229, 0.8)' },
+                '0%, 100%': { boxShadow: '0 0 10px rgba(79, 70, 229, 0.1)', borderColor: 'rgba(229, 231, 235, 1)' },
+                '50%': { boxShadow: '0 0 25px rgba(79, 70, 229, 0.4)', borderColor: 'rgba(79, 70, 229, 0.6)' },
               }
             }
           }
@@ -114,22 +114,21 @@
       .cinzel {
         font-family: 'Cinzel', serif;
       }
-      /* SUPER VISIBLE HIGH-CONTRAST SCROLLBAR */
+      /* Highly Visible Scrollbar */
       .custom-scrollbar::-webkit-scrollbar {
-        width: 14px;
+        width: 12px;
       }
       .custom-scrollbar::-webkit-scrollbar-track {
-        background: #f8fafc;
-        border-left: 2px solid #e2e8f0;
+        background: #f1f5f9;
+        border-radius: 10px;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #1e1b4b; /* Royal 900 */
-        border-radius: 100px;
-        border: 3px solid #f8fafc;
-        box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+        background: #1e1b4b;
+        border-radius: 10px;
+        border: 3px solid #f1f5f9;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background: #4f46e5; /* Royal 600 */
+        background: #4f46e5;
       }
 
       /* Base Transitions for smooth theme switching */
