--- a/index.html
+++ b/index.html
@@ -41,12 +41,21 @@
               'bounce-pulse': 'bounce-pulse 1s ease-in-out infinite',
               'orange-pulse': 'orange-pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite',
               'green-pulse': 'green-pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-              'red-pulse': 'red-pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'red-pulse': 'red-pulse 1s cubic-bezier(0.4, 0, 0.6, 1) infinite',
               'spin-slow': 'spin 8s linear infinite',
               'spin-very-slow': 'spin 20s linear infinite',
               'rays': 'rays 15s linear infinite',
               'particle-up': 'particle-up 10s ease-in-out infinite',
               'glow-pulse': 'glow-pulse 3s infinite ease-in-out',
+              'wax-stamp': 'wax-stamp 0.5s cubic-bezier(0.34, 1.56, 0.64, 1) forwards',
+              'parchment-unroll': 'parchment-unroll 0.8s ease-out forwards',
+              'electric-glow': 'electric-glow 1.5s ease-in-out infinite',
+              'spring-bounce': 'spring-bounce 2s infinite',
+              'sparkle-burst': 'sparkle-burst 0.6s ease-out forwards',
+              'dazzle-line': 'dazzle-line 1.5s ease-in-out infinite',
+              'shake': 'shake 0.5s cubic-bezier(.36,.07,.19,.97) both',
+              'flash-zoom': 'flash-zoom 0.8s cubic-bezier(0.4, 0, 0.2, 1) forwards',
+              'checkmark-bounce': 'checkmark-bounce 1.5s infinite ease-in-out'
             },
             keyframes: {
               float: {
@@ -68,16 +77,16 @@
                 '50%': { transform: 'scale(1.1) translateY(-5px)' },
               },
               'orange-pulse': {
-                '0%, 100%': { color: '#f97316', textShadow: '0 0 0px rgba(249, 115, 22, 0)' },
-                '50%': { color: '#fb923c', textShadow: '0 0 10px rgba(249, 115, 22, 0.4)' },
+                '0%, 100%': { boxShadow: '0 0 5px rgba(249, 115, 22, 0.4)', borderColor: 'rgba(249, 115, 22, 0.6)' },
+                '50%': { boxShadow: '0 0 25px rgba(249, 115, 22, 0.9)', borderColor: 'rgba(249, 115, 22, 1)' },
               },
               'green-pulse': {
-                '0%, 100%': { color: '#16a34a', textShadow: '0 0 0px rgba(22, 163, 74, 0)' },
-                '50%': { color: '#22c55e', textShadow: '0 0 10px rgba(22, 163, 74, 0.4)' },
+                '0%, 100%': { boxShadow: '0 0 5px rgba(16, 185, 129, 0.4)', borderColor: 'rgba(16, 185, 129, 0.6)' },
+                '50%': { boxShadow: '0 0 25px rgba(16, 185, 129, 0.9)', borderColor: 'rgba(16, 185, 129, 1)' },
               },
               'red-pulse': {
-                '0%, 100%': { color: '#dc2626', textShadow: '0 0 0px rgba(220, 38, 38, 0)' },
-                '50%': { color: '#ef4444', textShadow: '0 0 10px rgba(220, 38, 38, 0.4)' },
+                '0%, 100%': { boxShadow: '0 0 5px rgba(220, 38, 38, 0.4)', borderColor: 'rgba(220, 38, 38, 0.6)' },
+                '50%': { boxShadow: '0 0 35px rgba(220, 38, 38, 0.9)', borderColor: 'rgba(220, 38, 38, 1)' },
               },
               'rays': {
                 '0%': { transform: 'rotate(0deg) scale(1)' },
@@ -93,6 +102,49 @@
               'glow-pulse': {
                 '0%, 100%': { boxShadow: '0 0 10px rgba(79, 70, 229, 0.1)', borderColor: 'rgba(229, 231, 235, 1)' },
                 '50%': { boxShadow: '0 0 25px rgba(79, 70, 229, 0.4)', borderColor: 'rgba(79, 70, 229, 0.6)' },
+              },
+              'wax-stamp': {
+                '0%': { transform: 'scale(3) rotate(-15deg)', opacity: '0', filter: 'blur(10px)' },
+                '70%': { transform: 'scale(0.9) rotate(0deg)', opacity: '1', filter: 'blur(0)' },
+                '100%': { transform: 'scale(1) rotate(0deg)', opacity: '1' }
+              },
+              'parchment-unroll': {
+                '0%': { clipPath: 'inset(0 100% 0 0)' },
+                '100%': { clipPath: 'inset(0 0 0 0)' }
+              },
+              'electric-glow': {
+                '0%, 100%': { boxShadow: '0 0 5px #4f46e5, 0 0 10px #4f46e5' },
+                '50%': { boxShadow: '0 0 20px #6366f1, 0 0 40px #6366f1' }
+              },
+              'spring-bounce': {
+                '0%, 100%': { transform: 'translateY(0)' },
+                '20%': { transform: 'translateY(-15px)' },
+                '40%': { transform: 'translateY(5px)' },
+                '60%': { transform: 'translateY(-5px)' },
+                '80%': { transform: 'translateY(2px)' }
+              },
+              'sparkle-burst': {
+                '0%': { transform: 'scale(0)', opacity: '1' },
+                '100%': { transform: 'scale(2.5)', opacity: '0' }
+              },
+              'dazzle-line': {
+                '0%, 100%': { opacity: '0.5', transform: 'scaleX(1)' },
+                '50%': { opacity: '1', transform: 'scaleX(1.15)', filter: 'brightness(2.2) drop-shadow(0 0 25px currentColor)' }
+              },
+              'shake': {
+                '10%, 90%': { transform: 'translate3d(-2px, 0, 0)' },
+                '20%, 80%': { transform: 'translate3d(4px, 0, 0)' },
+                '30%, 50%, 70%': { transform: 'translate3d(-6px, 0, 0)' },
+                '40%, 60%': { transform: 'translate3d(6px, 0, 0)' }
+              },
+              'flash-zoom': {
+                '0%': { transform: 'scale(1)', filter: 'brightness(1)' },
+                '30%': { transform: 'scale(1.03)', filter: 'brightness(1.5)' },
+                '100%': { transform: 'scale(1)', filter: 'brightness(1)' }
+              },
+              'checkmark-bounce': {
+                '0%, 100%': { transform: 'translateY(0) scale(1)' },
+                '50%': { transform: 'translateY(-12px) scale(1.1)' }
               }
             }
           }
