--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
     "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "react": "https://aistudiocdn.com/react@^19.2.1",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
+    "xlsx": "https://esm.sh/xlsx@0.18.5",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0"
   }
 }
