--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
               'shake': 'shake 0.5s cubic-bezier(.36,.07,.19,.97) both',
               'flash-zoom': 'flash-zoom 0.8s cubic-bezier(0.4, 0, 0.2, 1) forwards',
               'checkmark-bounce': 'checkmark-bounce 1.5s infinite ease-in-out',
-              'trophy-celebrate': 'trophy-celebrate 2s ease-in-out infinite'
+              'trophy-celebrate': 'trophy-celebrate 2s ease-in-out infinite',
+              'congrat-pulse': 'congrat-pulse 2.5s ease-in-out infinite',
+              'icon-steady-motion': 'icon-steady-motion 3s ease-in-out infinite'
             },
             keyframes: {
               float: {
@@ -153,6 +155,14 @@
                 '40%': { transform: 'scale(1.3) rotate(15deg)' },
                 '60%': { transform: 'scale(1.3) rotate(-15deg)' },
                 '80%': { transform: 'scale(1.3) rotate(15deg)' },
+              },
+              'congrat-pulse': {
+                '0%, 100%': { transform: 'scale(1)', filter: 'brightness(1)' },
+                '50%': { transform: 'scale(1.15)', filter: 'brightness(1.8)' },
+              },
+              'icon-steady-motion': {
+                '0%, 100%': { transform: 'translateY(0) scale(1)' },
+                '50%': { transform: 'translateY(-10px) scale(1.15)' },
               }
             }
           }
